# Fix-Track

./: .env  .gitignore  DB_SCHEMA.md  ESC_POS_PRINTER_ANALYSIS.md  IMPLEMENTED_FIXES.md  INTEGRATION_CHECK.md  POS_TODO_README.md  README.md  TIPS.md  database-optimizations.sql  fixary.db  fixary.db.bak  fixary2.db  next.config.ts  package-lock.json  package.json  tailwind.config.ts  test.sql
.agent/workflows/: build-and-install.md
docs/: blueprint.md
src-tauri/: Cargo.toml  fixary.db  fixtrack.db  inventory_test.sql  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  printer.rs  printer2.rs  printer_vids.rs  printing.rs  system.rs
src-tauri/src/db/: client.rs  dashboard.rs  expense.rs  inventory.rs  mod.rs  models.rs  order.rs  payment.rs  repair.rs  repairs_test.rs  sale.rs  schema.rs  session.rs  supplier.rs  task.rs  transaction.rs
src/ai/: dev.ts
src/app/: globals.css  layout.tsx  page.tsx  test-page.tsx
src/components/: Analytics.tsx  AppLayout.tsx  ClientProviders.tsx  RepairDetail.tsx  RepairForm.tsx  RepairList.tsx  icons.ts
src/context/: ClientContext.tsx  EventContext.tsx  InventoryContext.tsx  LicenseContext.tsx  RepairContext.tsx  SettingsContext.tsx  SupplierContext.tsx  TaskContext.tsx  TransactionContext.tsx
src/hooks/: index.ts  use-mobile.ts  use-toast.ts  useAsyncInitialize.ts  useClientFilters.ts  useContextInitializer.ts  useDebouncedSearch.ts  useEscPosPrinter.ts  useInventoryFilters.ts  usePrintUtils.ts  usePrintWindow.ts  useRepairFilters.ts  useSupplierFilters.ts
src/lib/: barcode.ts  clientUtils.ts  crashReporter.ts  exportUtils.ts  flexibleSearch.ts  formatters.ts  i18n.ts  index.ts  initApp.ts  inventoryUtils.ts  license.ts  logoDataUri.ts  printTemplates.ts  printerConfig.ts  printerService.ts  repairUtils.ts  settings.ts  shopInfo.ts  supplierUtils.ts  temp_printTemplates.ts  (+2 more)
(+172 files in other folders)
