[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"

tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.29", features = ["bundled"] }
lazy_static = "1.4"
dirs = "6.0.0"

# Printer support dependencies
escposify = "0.3"
encoding = "0.2"
regex = "1.0"

# Platform-specific printer communication
# Windows
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winusb", "setupapi", "guiddef", "fileapi", "handleapi", "winnt"] }

# Unix (Linux/macOS)
[target.'cfg(unix)'.dependencies]
nix = "0.27"
regex = "1.0"

# Bluetooth support
[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
bluetooth-serial-port = "0.6.0"

# mDNS support for network printer discovery
mdns-sd = "0.9"

# Performance optimizations for release builds
[profile.release]
lto = true                # Enable Link Time Optimization
codegen-units = 1         # Use single codegen unit for better optimization
panic = "abort"           # Smaller binary size
strip = true              # Strip debug symbols
opt-level = "z"           # Optimize for size

[profile.dev]
opt-level = 1             # Some optimization in dev for better performance

[features]
default = ["mdns"]
mdns = []
